# taraxa-node

./: .clang-tidy  CMakeLists.txt  Dockerfile.builder  docker-compose.yaml
CMakeModules/: ProjectJSONRPCCPP.cmake  cpp_graphql_gen.cmake  cppcheck.cmake  dependencies.cmake
libraries/aleth/libdevcore/: CMakeLists.txt  CommonData.h  Log.h
libraries/aleth/libdevcrypto/: CMakeLists.txt
libraries/aleth/libp2p/: CMakeLists.txt  Common.h  Host.cpp  NodeTable.cpp  RLPxHandshake.cpp  Session.cpp
libraries/app/src/: app.cpp
libraries/cli/: CMakeLists.txt
libraries/common/: CMakeLists.txt
libraries/core_libs/: CMakeLists.txt
libraries/core_libs/consensus/include/dag/: dag_manager.hpp
libraries/core_libs/consensus/src/dag/: dag_manager.cpp
libraries/core_libs/consensus/src/pbft/: pbft_manager.cpp
libraries/core_libs/network/include/network/: network.hpp
libraries/core_libs/network/include/network/tarcap/: prometheus_packet_stats.hpp  taraxa_capability.hpp
libraries/core_libs/network/include/network/threadpool/: priority_queue.hpp  tarcap_thread_pool.hpp
libraries/core_libs/network/src/: network.cpp
libraries/core_libs/network/src/tarcap/: taraxa_capability.cpp
libraries/core_libs/network/src/threadpool/: priority_queue.cpp  tarcap_thread_pool.cpp
libraries/core_libs/node/src/: node.cpp
libraries/core_libs/storage/src/migration/: migration_manager.cpp  period_data.cpp
libraries/logger/: CMakeLists.txt
libraries/logger/include/logger/: logger.hpp
libraries/logger/src/: logger.cpp
libraries/metrics/: CMakeLists.txt
libraries/metrics/include/metrics/: dag_metrics.hpp  metrics_group.hpp  metrics_manager.hpp  metrics_service.hpp  network_metrics.hpp
libraries/metrics/src/: metrics_service.cpp
libraries/types/vote/: CMakeLists.txt
libraries/vdf/: CMakeLists.txt
rust/logger-rust/: Cargo.toml
rust/logger-rust/src/: lib.rs
rust/metrics-rust/: Cargo.toml
rust/metrics-rust/src/: lib.rs
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  gas_pricer_test.cpp  sortition_test.cpp
tests/test_util/: CMakeLists.txt
(+71 files in other folders)
